--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Added by Kyle
+applicationhost.config
+db.lock
+storage.ide
+storage.ide-shm
+storage.ide-wal
+
 ###################
 # compiled source #
 ###################
