--- a/Wagnerett/DBLayer/DBLayer.csproj
+++ b/Wagnerett/DBLayer/DBLayer.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBInterface.cs" />
+    <Compile Include="Poll.cs" />
+    <Compile Include="PollAnswer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
