--- a/Wagnerett/Wagnerett/Wagnerett.csproj
+++ b/Wagnerett/Wagnerett/Wagnerett.csproj
@@ -66,8 +66,17 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="jadeon.txt" />
+    <Content Include="css\font.css" />
+    <Content Include="css\main.css" />
+    <Content Include="css\poll.css" />
+    <Content Include="js\polldisplay.js" />
+    <Content Include="UberImportantData\jadeon.txt" />
     <Content Include="packages.config" />
+    <Content Include="Master.Master" />
+    <Content Include="PollDisplay.aspx" />
+    <Content Include="css\font\Moon2.0-Bold.otf" />
+    <Content Include="css\font\Moon2.0-Light.otf" />
+    <Content Include="css\font\Moon2.0-Regular.otf" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -84,6 +93,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Master.Master.cs">
+      <DependentUpon>Master.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Master.Master.designer.cs">
+      <DependentUpon>Master.Master</DependentUpon>
+    </Compile>
     <Compile Include="PollAPI.aspx.cs">
       <DependentUpon>PollAPI.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -92,7 +108,15 @@
       <DependentUpon>PollAPI.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PollDisplay.aspx.cs">
+      <DependentUpon>PollDisplay.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PollDisplay.aspx.designer.cs">
+      <DependentUpon>PollDisplay.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
