--- a/Wagnerett/APILayer/APILayer.csproj
+++ b/Wagnerett/APILayer/APILayer.csproj
@@ -46,5 +46,11 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DBLayer\DBLayer.csproj">
+      <Project>{129BAE75-531D-4642-88BA-96AE257D55EF}</Project>
+      <Name>DBLayer</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
